[gd_scene load_steps=15 format=3 uid="uid://d4ca0bnat5an8"]

[ext_resource type="Script" path="res://scripts/entities/enemies/cheeps/cheep_underwater_common.gd" id="1_tnjfp"]
[ext_resource type="Script" path="res://scripts/components/attack/class_attackee.gd" id="2_4mkpw"]
[ext_resource type="Script" path="res://scripts/components/enemy/class_enemy_touch.gd" id="3_drdjx"]
[ext_resource type="Texture2D" uid="uid://p7eda4j1fvsq" path="res://assets/gfx/objects/entities/enemies/cheeps/cheep_blue.png" id="4_wfjts"]
[ext_resource type="Script" path="res://scripts/#universal/sprite_flip_facing_h.gd" id="5_es3je"]
[ext_resource type="Script" path="res://scripts/components/instantiater/class_enemy_killing_process.gd" id="6_2fa71"]
[ext_resource type="PackedScene" uid="uid://qkfn5uj5jgx7" path="res://objects/entities/enemies/#death/cheeps/cheep_blue_death.tscn" id="7_7fgjn"]
[ext_resource type="PackedScene" uid="uid://d28wktlfkunys" path="res://objects/uis/counters/scores_label.tscn" id="8_nl5j4"]
[ext_resource type="Script" path="res://scripts/#universal/on_ready_visible.gd" id="9_obyv8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gmhw1"]
radius = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ddrqx"]
atlas = ExtResource("4_wfjts")
region = Rect2(0, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_81snu"]
atlas = ExtResource("4_wfjts")
region = Rect2(0, 32, 31, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_r7utg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddrqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81snu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jse0p"]
a = Vector2(0, -16)
b = Vector2(0, 16)

[node name="CheepBlue" type="Node2D"]
script = ExtResource("1_tnjfp")
collidable = true
metadata/_edit_pinned_properties_ = [&"collidable"]

[node name="EffectBox" type="Area2D" parent="." groups=["entity_collidable"]]
visible = false
collision_layer = 4
collision_mask = 53

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectBox"]
shape = SubResource("CircleShape2D_gmhw1")
debug_color = Color(0.964706, 0.192157, 0, 0.419608)

[node name="Attackee" type="Node" parent="EffectBox"]
script = ExtResource("2_4mkpw")
filter_ids = Array[int]([2])

[node name="EnemyTouch" type="Node" parent="EffectBox"]
script = ExtResource("3_drdjx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r7utg")
autoplay = "default"
script = ExtResource("5_es3je")

[node name="Collider" type="ShapeCast2D" parent="."]
visible = false
shape = SubResource("SegmentShape2D_jse0p")
target_position = Vector2(0, 0)
max_results = 2
collision_mask = 24
collide_with_areas = true

[node name="EnemyKillingProcess" type="Node2D" parent="."]
visible = false
script = ExtResource("6_2fa71")

[node name="CheepBlueDeath" parent="EnemyKillingProcess" groups=["instantiate_no_failure"] instance=ExtResource("7_7fgjn")]

[node name="Scores" parent="EnemyKillingProcess" groups=["instantiate_no_success_combo"] instance=ExtResource("8_nl5j4")]
text = "200"
amount = 200
metadata/_edit_pinned_properties_ = [&"amount"]

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
visible = false
position = Vector2(1.43051e-06, 4.76837e-07)
scale = Vector2(1.6, 1.6)
script = ExtResource("9_obyv8")

[node name="TimerInterval" type="Timer" parent="."]

[connection signal="cheep_collided_wall" from="." to="." method="collide_wall"]
[connection signal="cheep_out_of_fluid" from="." to="EnemyKillingProcess" method="forced_kill"]
[connection signal="on_hit_by_attacker" from="EffectBox/Attackee" to="EnemyKillingProcess" method="killing_process"]
[connection signal="killing_succeeded" from="EnemyKillingProcess" to="." method="queue_free"]
